setup the checker for nullness, temp commented it out, WIP